--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ test:
 about:
   home: https://github.com/Blosc/bloscpack
   license: MIT
+  license_file: LICENSE
   summary: 'Command line interface to and serialization format for Blosc'
 
 extra:
