Convert to noarch Python (#9)
* Make the package `noarch: python`

As this is a pure Python package with no selectors or use of 2to3, go
ahead and make it `noarch: python`. Should cutdown the maintenance
burden here drastically.

* MNT: Re-rendered with conda-smithy 3.1.12 and pinning 2018.11.27

As the package is now a `noarch: python` package, re-render to update
the CI configurations and other repo content accordingly.

* Bump build number to 1002

As the package is now `noarch: python`, bump the build number to `1002`
to create new packages.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,8 @@ source:
   sha256: 1fd53e5bec6f6fb98051cd324c68e65028bdf5efabab5f4d09b769fd1d8103e1
 
 build:
-  number: 1001
+  number: 1002
+  noarch: python
   script: python -m pip install --no-deps --ignore-installed .
   entry_points:
     - blpk = bloscpack.cli:main
